style: fix base-container wonkiness - margins overflowing, etc

--- a/src/assets/CSS/style.css
+++ b/src/assets/CSS/style.css
@@ -19,29 +19,9 @@ html {
   scroll-behavior: smooth;
 }
 
-.container {
-  width: 100%;
-}
-
-@media screen and (min-width: 768px) {
-  .container {
-    max-width: 768px
-  }
-}
-
 @media screen and (min-width: 1024px) {
   html {
     font-size: 16px
-  }
-
-  .container {
-    max-width: 1024px
-  }
-}
-
-@media screen and (min-width: 1280px) {
-  .container {
-    max-width: 1280px
   }
 }
 
